fix: nav item spacing cleanup

--- a/src/styles/app/bar.sass
+++ b/src/styles/app/bar.sass
@@ -21,10 +21,9 @@ header.cn-app-bar
     overflow: hidden
     text-overflow: ellipsis
 
-
-// If the window is md-or-large, we expext the tray to exist
-@include media-query-md-and-up
+/* on a desktop, and large screens, we need to make room for rail and tray (if visible) */
+@include media-query-desktop
   header.cn-app-bar
-    margin-left: 96px
-  body:has(.cn-app-tray:not(:empty)) header.cn-app-bar
-    margin-left: 396px
+    margin-left: var(--cn-rail-width)
+  body:has(.cn-tray:not(:empty)) header.cn-app-bar
+    margin-left: calc(var(--cn-rail-width) + var(--cn-tray-width))
