--- a/src/styles/core/default-design-tokens.sass
+++ b/src/styles/core/default-design-tokens.sass
@@ -9,6 +9,10 @@
   /* App Bar */
   --cn-app-bar-height: 64px
 
+  /* App rail, tray, etc */
+  --cn-rail-width: calc(var(--cn-grid-size) * 10)
+  --cn-tray-width: calc(var(--cn-grid-size) * 40)
+
   /* content area */
   --cn-content-max-width: 58ch
   --cn-breakout-width: calc(4 * var(--cn-gap))
